--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,13 @@ body {
 
 .first-section {
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   overflow: hidden;
+  padding: 50px 0px;
+  gap: 60px;
   background-color: #fa7070; }
 
 .nav {
@@ -130,26 +131,19 @@ body {
 
 .event {
   width: 70%;
-  height: 60.5%;
+  padding: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   opacity: 0;
   transform: translateX(50px);
-  position: relative; }
-  .event-background {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 11;
-    box-shadow: 0 8px 32px 0 rgba(61, 64, 105, 0.25);
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18); }
+  position: relative;
+  box-shadow: 0 8px 32px 0 rgba(61, 64, 105, 0.25);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18); }
   .event__container {
-    width: 92.5%;
-    height: 83.5%;
     border-radius: 10px;
     position: relative;
     z-index: 12;
@@ -160,7 +154,7 @@ body {
     background: rgba(255, 255, 255, 0.02);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; }
     .event__container--info {
-      height: 30%;
+      height: 125px;
       border-radius: 10px 10px 0px 0px;
       display: flex;
       position: relative;
@@ -189,6 +183,7 @@ body {
             width: 37.5px;
             height: 37.5px; }
         .event__container--info_name-instagram {
+          padding: 20px 0px;
           color: #f5f5f5;
           font-weight: 800;
           font-size: 1.3rem; }
@@ -200,7 +195,6 @@ body {
             font-size: 1.7rem; }
       .event__container--info_id {
         width: 35%;
-        height: 80%;
         display: flex;
         justify-content: flex-end;
         align-items: center;
@@ -212,10 +206,10 @@ body {
         text-transform: uppercase;
         clip-path: polygon(0 -1%, 103% -1%, 103% 103%, 27.5% 103%); }
       .event__container--info_event {
-        height: 70%;
+        padding: 20px;
         display: flex; }
         .event__container--info_event-left {
-          padding-left: 40px;
+          padding-left: 20px;
           width: 50%;
           border-right: 1px solid #fe9a8b;
           display: flex;
@@ -239,11 +233,9 @@ body {
             -webkit-text-fill-color: transparent;
             -moz-text-fill-color: transparent; }
             .event__container--info_event-left-h2_second {
-              font-size: 2.2rem;
-              color: red; }
+              font-size: 2.2rem; }
             .event__container--info_event-left-h2_third {
-              font-size: 1.9rem;
-              color: red; }
+              font-size: 1.9rem; }
         .event__container--info_event-right {
           border-left: .5px solid #fe9a8b;
           width: 50%;
@@ -462,7 +454,6 @@ body {
             .third-section_upcoming-events-card--info_event-left {
               padding-left: 40px;
               width: 50%;
-              overflow: scroll;
               border-right: 1px solid #c4c3fb;
               display: flex;
               flex-direction: column;
@@ -482,8 +473,7 @@ body {
               width: 50%;
               display: flex;
               justify-content: center;
-              align-items: center;
-              overflow: scroll; }
+              align-items: center; }
               .third-section_upcoming-events-card--info_event-right_content {
                 padding: 0px 40px;
                 font-size: 1rem; }
@@ -630,28 +620,32 @@ body {
 
 @media screen and (max-width: 965px) {
   .event {
-    min-height: 70.5%;
-    width: 90%; }
+    width: 80%; }
     .event__container {
-      height: 90%; }
+      gap: 10px; }
       .event__container--info {
         height: 20%; }
-        .event__container--info_name-instagram > h5 {
-          font-size: 1.4rem; }
-        .event__container--info_name-instagram > h3 {
-          font-size: 1.5rem; }
+        .event__container--info_name {
+          padding: 20px;
+          gap: 5px; }
+          .event__container--info_name-instagram > h5 {
+            font-size: 1.4rem; }
+          .event__container--info_name-instagram > h3 {
+            font-size: 1.5rem; }
         .event__container--info_id {
-          font-size: 2rem; }
+          padding-right: 10px;
+          font-size: 1.75rem;
+          clip-path: polygon(0 -1%, 103% -1%, 103% 85%, 27.5% 85%); }
         .event__container--info_event {
           height: 80%;
           display: flex;
           flex-direction: column;
-          gap: 20px; }
+          padding: 0px 10px; }
           .event__container--info_event-left {
-            padding-left: 0px;
-            padding: 40px;
+            padding: 10px 10px;
             width: 100%;
             height: 50%;
+            border: none;
             border-bottom: 1px solid #fe9a8b;
             display: flex;
             flex-direction: row;
@@ -675,9 +669,10 @@ body {
             height: 50%;
             display: flex;
             justify-content: center;
-            align-items: center; }
+            align-items: center;
+            border: none; }
             .event__container--info_event-right_content {
-              padding: 20px 40px;
+              padding: 20px 10px;
               font-size: 1.5rem; } }
 
 @media screen and (max-width: 840px) {
@@ -715,18 +710,12 @@ body {
       width: 100px;
       height: auto; }
   .event {
-    width: 95%;
-    transform: scale(0.95); }
+    width: 95%; }
     .event__container--info_name {
-      width: 60%; }
+      width: 55%; }
     .event__container--info_id {
-      width: 40%;
-      font-size: 1.5rem;
-      padding-right: 10px; }
-    .event__container--info_event-left {
-      padding: 20px 40px 20px 40px; }
-    .event__container--info_event-right_content {
-      padding: 0px 40px 30px 40px; }
+      width: 45%;
+      font-size: 1.5rem; }
   .story > p {
     font-size: 1.75rem; }
   .blob:nth-child(4) {
@@ -754,19 +743,13 @@ body {
     height: 70%; }
     .event__container--info_id {
       padding-right: 5px; }
-      .event__container--info_id > h4 {
-        margin-top: 22px; }
     .event__container--info_name {
       padding-left: 20px;
       gap: 10px; }
       .event__container--info_name-instagram > h3 {
         display: none; }
-    .event__container--info_event-left {
-      padding-left: 20px; }
-    .event__container--info_event-right_content {
-      padding-left: 20px; }
-      .event__container--info_event-right_content > p {
-        font-size: 1.3rem; }
+    .event__container--info_event-right_content > p {
+      font-size: 1.3rem; }
   .third-section_upcoming-events {
     display: block; }
     .third-section_upcoming-events-card {
@@ -777,12 +760,7 @@ body {
       .third-section_upcoming-events-card--info_event-left {
         padding: 0px 20px; }
       .third-section_upcoming-events-card--info_event-right {
-        border-left: .5px solid #fe9a8b;
-        width: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: scroll; }
+        width: 50%; }
         .third-section_upcoming-events-card--info_event-right_content {
           padding: 0px 10px;
           font-size: 1rem; }
@@ -810,7 +788,8 @@ body {
 
 @media screen and (max-width: 415px) {
   .event {
-    width: 95%; }
+    width: 97.5%;
+    padding: 12.5px; }
     .event__container--info_name-instagram > h5 {
       font-size: 1.2rem;
       margin-left: 0px; }
@@ -818,20 +797,16 @@ body {
       display: none; }
     .event__container--info_id > h4 {
       font-size: 1.2rem; }
-    .event__container--info_event-left {
-      padding-left: 20px; }
-      .event__container--info_event-left-h5 {
-        font-size: 1.1rem; }
-      .event__container--info_event-left-h2 {
-        font-size: 2.2rem; }
-        .event__container--info_event-left-h2_second {
-          font-size: 1.5rem; }
-        .event__container--info_event-left-h2_third {
-          font-size: 1.25rem; }
-    .event__container--info_event-right_content {
-      padding-left: 20px; }
-      .event__container--info_event-right_content > p {
-        font-size: 1.1rem; }
+    .event__container--info_event-left-h5 {
+      font-size: 1.1rem; }
+    .event__container--info_event-left-h2 {
+      font-size: 2.2rem; }
+      .event__container--info_event-left-h2_second {
+        font-size: 1.5rem; }
+      .event__container--info_event-left-h2_third {
+        font-size: 1.25rem; }
+    .event__container--info_event-right_content > p {
+      font-size: 1.1rem; }
   .team__cards-con {
     transform: scale(0.9); }
   .blob:nth-child(4) {
@@ -845,27 +820,14 @@ body {
     padding: 8px 15px; } }
 
 @media screen and (max-width: 324px) {
-  .event {
-    width: 95%;
-    height: 80%; }
-    .event__container--info_id {
-      padding-right: 5px; }
-      .event__container--info_id > h4 {
-        margin-top: 22px; }
-    .event__container--info_name {
-      padding-left: 20px;
-      gap: 10px; }
-      .event__container--info_name-instagram > h3 {
-        display: none; }
-    .event__container--info_event-left {
-      overflow: hidden; }
-      .event__container--info_event-left-h2_first {
-        font-size: 1.7rem; }
-      .event__container--info_event-left-h2_second {
-        font-ssze: 1.5rem; }
-      .event__container--info_event-left-h2_first {
-        font-size: 1.3rem; }
-    .event__container--info_event-right {
-      overflow: hidden; }
-      .event__container--info_event-right_content > p {
-        font-size: 1.2rem; } }
+  .third-section_upcoming-events {
+    display: block; }
+    .third-section_upcoming-events-card {
+      width: 100%;
+      height: 355px; }
+      .third-section_upcoming-events-card--info_id {
+        font-size: 1rem;
+        padding-right: 5px; }
+      .third-section_upcoming-events-card--info_event-right_content {
+        padding: 0px 10px;
+        font-size: .9rem; } }
