--- a/css/style.css
+++ b/css/style.css
@@ -332,14 +332,13 @@ body {
       opacity: 0; }
       .team__cards-con-name {
         bottom: 0;
+        padding: 27.5px 0px;
         z-index: 9999;
         width: 100%;
-        height: 90%;
-        height: auto;
+        height: 10%;
         background-color: #8ec5fc;
         background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
         z-index: 4;
-        height: 52px;
         border-radius: 0px 0px 10px 10px;
         display: flex;
         justify-content: center;
