--- a/sass/style.scss
+++ b/sass/style.scss
@@ -50,6 +50,10 @@ h6 {
   isolation: isolate;
 }
 
+link{
+  display: inline-block;
+}
+
 body {
   font-family: sans-serif;
   font-family: "Raleway", sans-serif;
@@ -875,9 +879,8 @@ body {
   transition: all 1s ease;
 }
 
-.title-img{
-  display: inline-block;
-}
+
+
 
 @media screen and (max-width:965px){
   .event {
