--- a/sass/style.scss
+++ b/sass/style.scss
@@ -561,11 +561,15 @@ body {
       gap: 40px;
       flex-wrap: wrap;
       width: 100%;
+      position: relative;
 
       &-card{
+
         margin: 50px 0px;
         width: 550px;
         height: 300px;
+        position: relative;
+        z-index: 3;
         display: flex;
         flex-direction: column;
         overflow: hidden;
@@ -655,6 +659,8 @@ body {
               gap: 20px;
               justify-content: center;
               align-items: flex-start;
+              position: relative;
+              z-index: 5;
     
               &-h5{
                 text-transform: uppercase;
@@ -670,11 +676,12 @@ body {
             }
     
             &-right{
-              border-left: .5px solid #fe9a8b;
               width: 50%;
               display: flex;
               justify-content: center;
               align-items: center;
+              position: relative;
+              z-index: 5;
     
               &_content{
                 padding: 0px 40px;
@@ -832,6 +839,23 @@ body {
 
 .p-card{
   background: #434343;
+}
+
+.event-blob{
+  position: absolute;
+  width: 120px;
+  bottom:0px;
+  right: -20px;
+  // right: -200px;
+  z-index: 1;
+  filter: blur(2px);
+
+  &:nth-child(2){
+    width: 110px;
+    left: -37.5px;
+    // right: -30px;
+    bottom: -25px;
+  }
 }
 
 //! past INVITES
